AWS/AWS-Services/Three-Tier-Apps/Simple-Three-Tier-App/_jump-server.tf

resource "aws_instance" "Jump_Server" {
  ami           = var.ami # for us-east-1
  instance_type = var.instance_type


  # if we do not specify the vpc subnets info here, the ec2 instance will be situated in the default VPC that came with the account 
  subnet_id     =  aws_subnet.jumpbox_subnet_1c.id
  vpc_security_group_ids    = [aws_security_group.Jump-server-security-group.id]
  key_name               = var.key_name



associate_public_ip_address    = true # to make sure public ip is display
# key_name     = aws_key_pair.myapp-key-pair.key_name #stating that we are using an a keypair generated above
# user_data = file("install.sh") #handles instalation of docker on ec2 instance and running nginx on it
 root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

 tags = {
    Name = "${var.app_name}-Jump-Server"
  }
}
